# car-app

./: .bazelrc  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  WORKSPACE.bazel
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: main.yaml  pre-commit.yaml
docs/: getting_started.md
pkg/: BUILD.bazel
scripts/: build.sh  coverage.sh  docker.sh  package.sh  pre-commit.sh  test.sh
source/: BUILD.bazel  main.cpp
source/accelerator/: BUILD.bazel  accelerator.hpp
source/brake/: BUILD.bazel  brake.hpp
source/car/: BUILD.bazel  car.cpp  car.hpp
source/driver/: BUILD.bazel  driver.hpp
source/include/: car_spec.hpp
source/shift/: BUILD.bazel  shift.cpp  shift.hpp
tests/accelerator/: BUILD.bazel  test_accelerator.cpp
tests/car/: BUILD.bazel  test_car.cpp
tests/driver/: BUILD.bazel  test_driver.cpp
tests/shift/: BUILD.bazel  test_shift.cpp
